# xgrowth-dex

./: Anchor.toml  DEPLOYMENT.md  README.md  package.json
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/agents/[id]/: page.tsx
app/agents/[id]/buy/: page.tsx
app/agents/[id]/trade/: page.tsx
app/marketplace/: page.tsx
app/rewards/: page.tsx
components/: agent-card.tsx  bonding-curve-chart.tsx  header.tsx
lib/: jupiter-client.ts  wallet-provider.tsx
lib/solana/: hooks.ts  x-growth-sdk.ts
programs/x-growth/: Cargo.toml
programs/x-growth/src/: errors.rs  lib.rs  state.rs
programs/x-growth/src/instructions/: buy_from_curve.rs  claim_rewards.rs  create_agent.rs  distribute_rewards.rs  initialize_platform.rs  mod.rs  sell_to_curve.rs  update_performance.rs
scripts/: deploy-contracts.ts
