[package]
name = "x-growth"
version = "0.1.0"
description = "X-Growth Agent Token Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x_growth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
